    (Larry McCay via stevel)

    HADOOP-11859. PseudoAuthenticationHandler fails with httpcomponents v4.4.
    (Eugene Koifman via jitendra)

    HADOOP-11848. Incorrect arguments to sizeof in DomainSocket.c (Malcolm
    Kavalsky via Colin P. McCabe)

    HADOOP-11861. test-patch.sh rewrite addendum patch.
    (Allen Wittenauer via cnauroth)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES

    HADOOP-10530 Make hadoop build on Java7+ only (stevel)

  NEW FEATURES

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-9629. Support Windows Azure Storage - Blob as a file system in Hadoop.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovic, Brian Swan, and Min Wei via cnauroth)

    HADOOP-10728. Metrics system for Windows Azure Storage Filesystem.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovich, Brian Swan, and Min Wei via cnauroth)

    HADOOP-8989. hadoop fs -find feature (Jonathan Allen via aw)

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)

    HADOOP-11045. Introducing a tool to detect flaky tests of hadoop jenkins testing
    job. (Yongjun Zhang and Todd Lipcon via ozawa)

    HADOOP-11510. Expose truncate API via FileContext. (yliu)

    HADOOP-11569. Provide Merge API for MapFile to merge multiple similar MapFiles
    to one MapFile. (Vinayakumar B via ozawa)

  IMPROVEMENTS
